# trader

./: .gitignore  main.py  pyproject.toml
trader/: settings.py
trader/strategy/: __init__.py  brother2.py
trader/utils/: __init__.py  fetch_data.py  read_config.py  tick.py
